[project]
name = "auto-posture"
version = "0.1.0"
description = "Background posture monitor using OpenCV and MediaPipe"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-contrib-python>=4.8",
    "mediapipe>=0.10",
    "pystray>=0.19",
    "pillow>=10",
    "winotify>=1.1",
    "loguru>=0.7",
]

[project.scripts]
posture-monitor = "posture_monitor:main"

[tool.uv]
dev-dependencies = []
